--- a/views/project.pug
+++ b/views/project.pug
@@ -14,30 +14,29 @@ block content
         //- Use the info in your data file and the comments below to complete this template
 
         //- Use interpolation to dynamically add the project title
-        h1 Project Name
+        h1= name
 
         //- Use interpolation to dynamically add the project description
-        p Description
+        p= desc
 
       .project-tech-links-box.box
         h6 Technologies
         ul
-
-          //- Use an `each` iterator and interpolation to dynamically replace the li tags below with the technologies listed for this project
-          li HTML
-          li CSS
-          li JavaScript
+          each tech in techs
+            //- Use an `each` iterator and interpolation to dynamically replace the li tags below with the technologies listed for this project
+            li= tech
+          
 
         //- Add the href values to the links below
-        a.btn-link(href='') Live Demo
-        a.btn-link(href='') GitHub Repo
+        a.btn-link(href=`${liveLink}`, target='_blank') Live Demo
+        a.btn-link(href=`${repoLink}`, target='_blank') GitHub Repo
 
     .project-img-box.box
 
       //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
-      img.project-img(src='https://placehold.it/1200x550', alt='')
-      img.project-img(src='https://placehold.it/1200x550', alt='')
-      img.project-img(src='https://placehold.it/1200x550', alt='')
+      img.project-img(src=`${imgOne}`, alt='')
+      img.project-img(src=`${imgTwo}`, alt='')
+      img.project-img(src=`${imgThree}`, alt='')
 
     nav.nav
       a(href='/')
