--- a/views/about.pug
+++ b/views/about.pug
@@ -12,7 +12,7 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Name
+        h1 Matthew Manzano
 
         //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
@@ -31,7 +31,9 @@ block content
         ul
           li HTML
           li CSS
+          li SASS
           li JavaScript
+          li Bootstrap
           li Git and GitHub
           li VS Code
           li Accessibility
@@ -45,13 +47,13 @@ block content
 
         //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li 555-555-5555
+          li specialist.erratic@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/matthewmanzano/') LinkedIn
+        a.btn-link(href='https://github.com/mangomateo') GitHub
+        a.btn-link(href='https://twitter.com/') Twitter
 
     nav.nav
       a(href='/')
