--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -1,6 +1,11 @@
 extends layout.pug
 
 block content
+
+  nav.nav
+    a(href='/')
+      span &larr;
+      |  Back
     h1= err.message
     h2= err.status
     
