update error handler pug templates

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,5 +1,15 @@
 extends layout.pug
 
 block content
+
+  nav.nav
+    a(href='/')
+      span &larr;
+      |  Back
     h1= err.message
     h2= err.status
+    
+  article
+    .error-meme
+      img(src='../images/500-dog.jpg', alt='Dog in trouble')
+    
