--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -8,4 +8,8 @@ block content
       |  Back
     h1= err.message
     h2= err.status
+
+  article
+    .error-meme
+      img(src='../images/404-dog.png', alt='Half awake dog')
     
