--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html(lang="en" dir="ltr")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Portfolio Site
     link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Special+Elite&family=Caveat&display=swap', rel='stylesheet')
     link(rel='stylesheet', href='/css/normalize.css')
     link(rel='stylesheet', href='/css/styles.css')
 
@@ -16,14 +17,8 @@ html(lang="en" dir="ltr")
         .thumbnail-box
           img.thumbnail(src='../images/profile.png', alt='')
         .dev-intro-box
-
-          //- Replace with your name
           h5 Matthew Manzano
-
-          //- Replace with description of who you are, what you do, and why you are so awesome
           p &#127918; Gaming enthusiaist, &#9749; &#127861; tea and coffee nerd and &#128187; JavaScript developer
-
-          //- Add path from your '/about' route handler to the href below
           a(href='/about') Learn More &rarr;
 
     .wrapper
@@ -31,7 +26,6 @@ html(lang="en" dir="ltr")
         .header-info-box
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
-          //- Replace with your name — this is for the mobile layout
           span Matthew Manzano
 
       block content
