--- a/views/about.pug
+++ b/views/about.pug
@@ -16,7 +16,7 @@ block content
 
 
         .about-bio
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p I have been learning and applying my front-end web development skills for the last two years, and I have been focusing my efforts on full stack JavaScript development over the last 6 months. I am a life-long learner and I hope to bring my enthusiasm and creativity to your team!
 
 
       .skills-contact-box.box
@@ -43,7 +43,7 @@ block content
 
         a.btn-link(href='https://www.linkedin.com/in/matthewmanzano/') LinkedIn
         a.btn-link(href='https://github.com/mangomateo') GitHub
-        a.btn-link(href='https://twitter.com/') Twitter
+        a.btn-link(href='https://twitter.com/mattcodezano') Twitter
 
     nav.nav
       a(href='/')
