--- a/views/project.pug
+++ b/views/project.pug
@@ -25,9 +25,9 @@ block content
 
     .project-img-box.box
 
-      img.project-img(src=`${imgOne}`, alt='')
-      img.project-img(src=`${imgTwo}`, alt='')
-      img.project-img(src=`${imgThree}`, alt='')
+      img.project-img.img-effect(src=`${imgOne}`, alt='')
+      img.project-img.img-effect(src=`${imgTwo}`, alt='')
+      img.project-img.img-effect(src=`${imgThree}`, alt='')
 
     nav.nav
       a(href='/')
