--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html(lang="en" dir="ltr")
           img.thumbnail(src='../images/profile.png', alt='It\'s my face!' )
         .dev-intro-box
           h5 Matthew Manzano
-          p &#127918; Gaming enthusiaist, &#9749; &#127861; tea and coffee nerd and &#128187; JavaScript developer
+          p &#127918; Gaming enthusiast, &#9749; &#127861; tea and coffee nerd and &#128187; JavaScript developer
           a(href='/about') Learn More &rarr;
           br
           p Designed with &#128151; by
