--- a/views/about.pug
+++ b/views/about.pug
@@ -41,9 +41,9 @@ block content
           li 555-555-5555
           li specialist.erratic@gmail.com
 
-        a.btn-link(href='https://www.linkedin.com/in/matthewmanzano/') LinkedIn
-        a.btn-link(href='https://github.com/mangomateo') GitHub
-        a.btn-link(href='https://twitter.com/mattcodezano') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/matthewmanzano/', target='_blank') LinkedIn
+        a.btn-link(href='https://github.com/mangomateo', target='_blank') GitHub
+        a.btn-link(href='https://twitter.com/mattcodezano', target='_blank') Twitter
 
     nav.nav
       a(href='/')
